syntax = "proto3";

package com.apihug.sample.proto.infra.demo001;

import "extend/constant.proto";
import "swagger/annotations.proto";
import "extend/domain.proto";

option (hope.domain.kind) = ENUM;

enum  Demo001Enum {

  option (hope.swagger.enm) = {
    description: "Example Enum",
    example: "TENANT|PLATFORM"
  };

  EXAMPLE_ENUM_GOOD = 0 [(hope.constant.field) = {code: 1,message: "GOOD", message2: "you are good man"}];
  EXAMPLE_ENUM_BAD = 1 [(hope.constant.field) = {code: 2,message: "BAD", message2: "you are bad man"}];

}